samples/_failures_safe/1761390940_751154_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96b07213.c: In function ‘main’:
./samples/SAFE/__tmp_96b07213.c:139:5: error: expected expression at end of input
  139 |     mat2.rows =
      |     ^~~~
./samples/SAFE/__tmp_96b07213.c:139:5: error: expected declaration or statement at end of input
